HW9 add three section

--- a/style/section_one.scss
+++ b/style/section_one.scss
@@ -1,6 +1,6 @@
 .background{
     height: 60rem;
-    background: linear-gradient(360deg, rgba(237, 215, 137, 0.9) 0%, rgba(233, 130, 131, 0.9) 100%), url(img/Rectangle.png);
+    background: linear-gradient(360deg, rgba(237, 215, 137, 0.9) 0%, rgba(233, 130, 131, 0.9) 100%), url(../img/Rectangle.png);
     .nav_bar {
         max-width: 1170px;
         display: flex;
