--- a/style/style.css
+++ b/style/style.css
@@ -8,9 +8,8 @@
 @import url(section_six.scss);
 @import url(section_seven.scss);
 @import url(section_eight.scss);
-@import url(section_nine.scss);
-@import url(section_ten.scss);
-body{
-    margin: 0;
-    max-width: 1510px;
+body {
+  margin: 0;
+  max-width: 1510px;
 }
+/*# sourceMappingURL=style.css.map */
