--- a/style/style.scss
+++ b/style/style.scss
@@ -10,6 +10,7 @@
 @import url(section_eight.scss);
 @import url(section_nine.scss);
 @import url(section_ten.scss);
+@import url(section_eleven.scss);
 body{
     margin: 0;
     max-width: 1510px;
