--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,16 @@
-@import url(color.scss);
-@import url(text.scss);
-@import url(section_one.scss);
-@import url(section_two.scss);
-@import url(section_three.scss);
-@import url(section_four.scss);
-@import url(section_five.scss);
-@import url(section_six.scss);
-@import url(section_seven.scss);
-@import url(section_eight.scss);
-@import url(section_nine.scss);
-@import url(section_ten.scss);
-@import url(section_eleven.scss);
+@import url(color.css);
+@import url(text.css);
+@import url(section_one.css);
+@import url(section_two.css);
+@import url(section_three.css);
+@import url(section_four.css);
+@import url(section_five.css);
+@import url(section_six.css);
+@import url(section_seven.css);
+@import url(section_eight.css);
+@import url(section_nine.css);
+@import url(section_ten.css);
+@import url(section_eleven.css);
 body {
   margin: 0;
   max-width: 1510px;
